Migrate flyway settings and some mono/rxjava switching